--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "msGetStarted",
   "version": "1.2.10",
   "description": "DigitalSignage.com branded get started app",
+  "engines": {
+    "node": "5.9.1"
+  },
   "repository": {
     "url": "https://github.com/born2net/msgetstarted"
   },
+  "main": "express.js",
   "scripts": {
-    "postinstall": "node ./express.js"
+    "start": "node express.js"
   },
   "author": "Sean Levy",
   "license": "GPL V3 modified",
