--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cheerio": "^0.20.0",
     "colors": "^1.1.2",
     "express": "^4.13.4",
+    "force-ssl-heroku": "^1.0.2",
     "live-server": "^1.0.0",
     "node-fetch": "^1.5.1",
     "opn": "^4.0.1",
